tests/testdata/npm/file_dts_dmts_dcts/main.out
Download http://localhost:4260/@denotest/file-dts-dmts-dcts
Download http://localhost:4260/@denotest/file-dts-dmts-dcts/1.0.0.tgz
Check file:///[WILDCARD]/main.ts
error: TS2322 [ERROR]: Type '5' is not assignable to type '"dts"'.
const value1: Dts1 = 5;
      ~~~~~~
    at file:///[WILDCARD]

TS2322 [ERROR]: Type '5' is not assignable to type '"mts"'.
const value2: Mts1 = 5;
      ~~~~~~
    at file:///[WILDCARD]

TS2322 [ERROR]: Type '5' is not assignable to type '"mts"'.
const value3: Mts2 = 5;
      ~~~~~~
    at file:///[WILDCARD]

TS2322 [ERROR]: Type '5' is not assignable to type '"cts"'.
const value4: Cts1 = 5;
      ~~~~~~
    at file:///[WILDCARD]

Found 4 errors.
