tests/testdata/npm/file_dts_dmts_dcts/main.ts
import { Value as Dts1 } from "npm:@denotest/file-dts-dmts-dcts/js";
import { Value as Mts1 } from "npm:@denotest/file-dts-dmts-dcts";
import { Value as Mts2 } from "npm:@denotest/file-dts-dmts-dcts/mjs";
import { Value as Cts1 } from "npm:@denotest/file-dts-dmts-dcts/cjs";

const value1: Dts1 = 5;
const value2: Mts1 = 5;
const value3: Mts2 = 5;
const value4: Cts1 = 5;
